Updated the numbering

--- a/Beginner_1/3. Operators and Delimiters.ipynb
+++ b/Beginner_1/3. Operators and Delimiters.ipynb
@@ -4,16 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.1 Assignment Operators\n",
+    "## 3.1 Assignment Operators\n",
     "\n",
     "\n",
     "### =  \n",
-    "Used for assigning the value of right operand to the left operand. For example:"
+    "Used for assigning the value of right operand to the left operand. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -55,12 +57,14 @@
    "metadata": {},
    "source": [
     "### Add AND (+=) \n",
-    "Adds right operand to the left operand and assign the result to left operand. For example:"
+    "Adds right operand to the left operand and assign the result to left operand. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -103,12 +107,14 @@
    "metadata": {},
    "source": [
     "### Subtract AND ( -= )\n",
-    "Subtracts the right operand from left and assigns subtraction to the left operand. For example:"
+    "Subtracts the right operand from left and assigns subtraction to the left operand. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -152,12 +158,14 @@
    "source": [
     "### Multiply AND ( *= )\n",
     "\n",
-    "Multiplies right operand with the left operand and assign the result to left operand. For example:"
+    "Multiplies right operand with the left operand and assign the result to left operand.\n",
+    "\n",
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -179,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +209,9 @@
    "source": [
     "### Divide AND (/=)\n",
     "\n",
-    "Divides left operand with the right operand and assign the result to left operand. For example:"
+    "Divides left operand with the right operand and assign the result to left operand. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
@@ -228,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -249,12 +259,14 @@
    "metadata": {},
    "source": [
     "### Modulus AND (%=)\n",
-    "Takes modulus using two operands and assign the result to left operand. For example:"
+    "Takes modulus using two operands and assign the result to left operand. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -297,12 +309,14 @@
    "metadata": {},
    "source": [
     "### Exponent AND (**=)\n",
-    "Performs exponential (power) calculation on operators and assign value to the left operand. For example:"
+    "Performs exponential (power) calculation on operators and assign value to the left operand. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +359,9 @@
    "metadata": {},
    "source": [
     "### Floor Division (//=)\n",
-    "Performs floor division on operators and assign value to the left operand. For example:"
+    "Performs floor division on operators and assign value to the left operand. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
@@ -372,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -406,11 +422,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Boolean Operators\n",
+    "## 3.2 Boolean Operators\n",
     "\n",
-    "<i>\"A boolean is like a light switch. It can only have two values. Just like a light switch can only be on or off, a boolean can only be True or False.\"</i>\n",
+    "> <i>\"A boolean is like a light switch. It can only have two values. Just like a light switch can only be on or off, a boolean can only be True or False.\"</i>\n",
     "\n",
-    "Below are the boolean operations in ascending priority:"
+    "Below are the boolean operations in ascending priority −"
    ]
   },
   {
@@ -421,12 +437,12 @@
     "\n",
     "It only evaluates the second argument if the first one is <b>False</b>.\n",
     "\n",
-    "Go ahead if run the example below:"
+    "Go ahead if run the example below −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -459,12 +475,12 @@
     "\n",
     "It only evaluates the second argument if the first one is <b>True</b>\n",
     "\n",
-    "Try to run the example below:"
+    "Try to run the example below −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -495,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -525,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Identity Operators\n",
+    "## 3.3 Identity Operators\n",
     "They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical."
    ]
   },
@@ -539,19 +555,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 20\n",
     "b = 20\n",
@@ -570,19 +578,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 20\n",
     "b = 30\n",
@@ -608,7 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparison Operators\n",
+    "## 3.4 Comparison Operators\n",
     "\n",
     "<i>\"These operators compare the values on either sides of them and decide the relation among them. They are also called Relational operators.\"</i>"
    ]
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -685,7 +685,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Difference between is and == \n",
+    "## 3.5 Difference between is and == \n",
     "\n",
     "### is  \n",
     " - For <i>reference</i> equality. \n",
@@ -697,25 +697,16 @@
     " - Use it when you would like to know if two objects have the same value.\n",
     " - Will return true if the objects referred to by the variables are equal.\n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example no. 1\n",
     "\n",
@@ -731,20 +722,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example no. 2\n",
     "\n",
@@ -759,7 +741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Arithmetic Operators"
+    "## 3.6 Arithmetic Operators"
    ]
   },
   {
@@ -773,19 +755,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 30\n",
     "b = 10\n",
@@ -805,19 +779,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 30\n",
     "b = 10\n",
@@ -837,19 +803,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "300\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 30\n",
     "b = 10\n",
@@ -869,19 +827,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 30\n",
     "b = 10\n",
@@ -901,19 +851,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 30\n",
     "b = 4\n",
@@ -933,19 +875,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2048\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 2 ** 11\n",
     "\n",
@@ -963,19 +897,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 10.25\n",
     "b = 2\n",
@@ -1002,9 +928,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Membership Operators\n",
+    "## 3.7 Membership Operators\n",
     "\n",
-    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators:"
+    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators −"
    ]
   },
   {
@@ -1018,20 +944,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 10\n",
     "my_list = [2,4,6,8,10]\n",
@@ -1052,20 +969,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 10\n",
     "my_list = [2,4,6,8,10]\n",
