--- a/Beginner_1/4. Simple and Compound Statements.ipynb
+++ b/Beginner_1/4. Simple and Compound Statements.ipynb
@@ -4,19 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.1 Simple Statements"
+    "## 4.1 Simple Statements"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A simple statement is comprised within a single logical line. For example:"
+    "A simple statement is comprised within a single logical line. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -29,14 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Several simple statements may occur on a single line separated by semicolons: "
+    "Several simple statements may occur on a single line separated by semicolons − "
    ]
   },
   {
@@ -74,14 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4.2 Compound Statements"
+    "## 4.2 Compound Statements"
    ]
   },
   {
@@ -96,19 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We got 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var1 = 100\n",
     "\n",
@@ -124,7 +104,7 @@
    "source": [
     "A compound statement consists of one or more ‘clauses.’ A clause consists of a header and a ‘suite.’ The clause headers of a particular compound statement are all at the same indentation level. Each clause header begins with a uniquely identifying keyword and ends with a colon. \n",
     "\n",
-    "Syntax:"
+    "Syntax −"
    ]
   },
   {
