added ending note

--- a/Intermediate_2/14. Web Development Framework - Flask.ipynb
+++ b/Intermediate_2/14. Web Development Framework - Flask.ipynb
@@ -342,7 +342,9 @@
    "source": [
     "## Other Flask functions\n",
     "\n",
-    "There are other functions available to import from Flask. We'll use some of them later but for now, these are some of the common ones."
+    "There are other functions available to import from Flask. We'll use some of them later but for now, these are some of the common ones.\n",
+    "\n",
+    "We made a template appear on the screen and you've seen how common Flask functions work. We'll go deeper into templates in the next notebook."
    ]
   },
   {
