updated operators and added delimiters

--- a/Beginner_1/3. Operators and Delimiters.ipynb
+++ b/Beginner_1/3. Operators and Delimiters.ipynb
@@ -4,10 +4,193 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Assignment Operators\n",
+    "# 3.1 [Operators](https://docs.python.org/3.5/reference/lexical_analysis.html#operators)\n",
+    "\n",
+    "There are various operators available in Python. Operators usually come in symbols but in Python there are also operators that come in words. Let's take a look at some common operators."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1.1 Arithmetic Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### + (addition)\n",
+    "\n",
+    "Adds values on either side of the operator. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 30\n",
+    "b = 10\n",
+    "\n",
+    "my_sum = a + b\n",
+    "print(my_sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - (subtraction)\n",
+    "\n",
+    "Subtracts right hand operand from left hand operand."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 30\n",
+    "b = 10\n",
+    "\n",
+    "my_difference = a - b\n",
+    "print(my_difference)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### * (multiplication)\n",
+    "\n",
+    "Multiplies values on either side of the operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 30\n",
+    "b = 10\n",
+    "\n",
+    "my_product = a * b\n",
+    "print(my_product)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### / (division)\n",
+    "\n",
+    "Divides left hand operand by right hand operand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 30\n",
+    "b = 10\n",
+    "\n",
+    "my_quotient = a / b\n",
+    "print(my_quotient)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### % (modulus)\n",
+    "\n",
+    "Divides left hand operand by right hand operand and <b>returns remainder</b>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 30\n",
+    "b = 4\n",
+    "\n",
+    "my_modulus = a % b\n",
+    "print(my_modulus)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ** (exponent)\n",
+    "\n",
+    "Performs <b>exponential (power)</b> calculation on operators."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 2 ** 11\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (Floor Division)\n",
+    "\n",
+    "The division of operands where the result is the quotient in which the digits after the decimal point are removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 10.25\n",
+    "b = 2\n",
+    "\n",
+    "my_floor_division = (a // b)\n",
+    "print(my_floor_division)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1.2 Assignment Operators\n",
     "\n",
     "\n",
     "### =  \n",
+    "\n",
     "Used for assigning the value of right operand to the left operand. \n",
     "\n",
     "For example −"
@@ -56,7 +239,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 3.1.2.1 [Augmented Assignment](https://docs.python.org/3.5/reference/simple_stmts.html#augmented-assignment-statements)\n",
+    "\n",
+    "The assignment operator `=` can be augmented with arithmetic operators and used in combination instead of using mutiple statements.\n",
+    "\n",
     "### Add AND (+=) \n",
+    "\n",
     "Adds right operand to the left operand and assign the result to left operand. \n",
     "\n",
     "For example −"
@@ -415,14 +603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3.2 Boolean Operators\n",
+    "## 3.1.3 Boolean Operators\n",
     "\n",
     "> <i>\"A boolean is like a light switch. It can only have two values. Just like a light switch can only be on or off, a boolean can only be True or False.\"</i>\n",
     "\n",
@@ -527,7 +708,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
+    "## 3.1.4 Membership Operators\n",
+    "\n",
+    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators −"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### in\n",
+    "\n",
+    "Evaluates to true if it finds a variable in the specified sequence and false otherwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 10\n",
+    "my_list = [2,4,6,8,10]\n",
+    "my_list_2 = [1,2,3,4,5]\n",
+    "\n",
+    "print(a in my_list)   # Prints 'True' because 10 is included in my_list \n",
+    "print(a in my_list_2) # Prints 'False' because 10 is not included in my_list_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### not in\n",
+    "\n",
+    "Evaluates to true if it does not finds a variable in the specified sequence and false otherwise. Basically, it is the opposite of '<i>in</i>' that was explained above."
    ]
   },
   {
@@ -538,10 +755,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 10\n",
+    "my_list = [2,4,6,8,10]\n",
+    "my_list_2 = [1,2,3,4,5]\n",
+    "\n",
+    "print(a not in my_list)   # Prints 'False' because 10 is included in my_list \n",
+    "print(a not in my_list_2) # Prints 'True' because 10 is not included in my_list_2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Identity Operators\n",
+    "## 3.1.5 Identity Operators\n",
     "They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical."
    ]
   },
@@ -594,21 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3.4 Comparison Operators\n",
+    "## 3.1.6 Comparison Operators\n",
     "\n",
     "<i>\"These operators compare the values on either sides of them and decide the relation among them. They are also called Relational operators.\"</i>"
    ]
@@ -685,7 +904,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.5 Difference between is and == \n",
+    "## 3.1.7 Difference between is and == \n",
     "\n",
     "### is  \n",
     " - For <i>reference</i> equality. \n",
@@ -741,16 +960,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.6 Arithmetic Operators"
+    "# 3.2 [Delimiters](https://docs.python.org/3.5/reference/lexical_analysis.html#delimiters)\n",
+    "\n",
+    "You'll also encounter a lot of delimiters in Python. One delimiter you won't see a lot of is the semicolon (`;`). The line delimiter is completely optional in Python. Each data type has its own delimiter and these delimiters can be found in other places. Let's look at what some common delimiters mean."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### + (addition)\n",
+    "## 3.2.1 `[ ]` (brackets)\n",
     "\n",
-    "Adds values on either side of the operator. "
+    "These represent __lists__ when it contains a series of values, or a __list comprehension__ when it contains an expression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = [1, 2, 3, 4]\n",
+    "b = [  # these can be split up to multiple lines\n",
+    "    1,\n",
+    "    2,\n",
+    "    3,\n",
+    "    4,\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2.2 `{ }` ([curly] braces)\n",
+    "\n",
+    "These brackets represent either __dictionaries__ when it contains key-value pairs, or a __set__ when it contains a list-like value."
    ]
   },
   {
@@ -761,20 +1008,21 @@
    },
    "outputs": [],
    "source": [
-    "a = 30\n",
-    "b = 10\n",
-    "\n",
-    "my_sum = a + b\n",
-    "print(my_sum)"
+    "a = {\"key\": \"value\"}  # dictionary\n",
+    "b = {1, 2, 3}  # set"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### - (subtraction)\n",
+    "## 3.2.3 `( )` (parenthesis)\n",
     "\n",
-    "Subtracts right hand operand from left hand operand."
+    "These brackets represent either __tuples__ when it contains a list-like value, or a __generator__ when it contains an expression.\n",
+    "\n",
+    "These can also be found succeeding a function name when it's called or a class when instantiated.\n",
+    "\n",
+    "When found in a statement, it pertains to a grouping that may also determine precedence."
    ]
   },
   {
@@ -785,202 +1033,38 @@
    },
    "outputs": [],
    "source": [
-    "a = 30\n",
-    "b = 10\n",
-    "\n",
-    "my_difference = a - b\n",
-    "print(my_difference)"
+    "a = (1, 2, 3)  # tuple\n",
+    "b = (i for i in range(3))  # generator expression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### * (multiplication)\n",
+    "## 3.2.4 `\"\"\" \"\"\"` or `''' '''`(triple double/single quotes)\n",
     "\n",
-    "Multiplies values on either side of the operator"
+    "This represents a (multiline) __comment__. When immediately succeeding a function, class or method definition, it depresents a [__docstring__](https://www.python.org/dev/peps/pep-0257/#what-is-a-docstring)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = 30\n",
-    "b = 10\n",
+    "def func():\n",
+    "    \"\"\"Function docstring\"\"\"\n",
+    "    pass\n",
     "\n",
-    "my_product = a * b\n",
-    "print(my_product)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### / (division)\n",
     "\n",
-    "Divides left hand operand by right hand operand"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = 30\n",
-    "b = 10\n",
-    "\n",
-    "my_quotient = a / b\n",
-    "print(my_quotient)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### % (modulus)\n",
-    "\n",
-    "Divides left hand operand by right hand operand and <b>returns remainder</b>."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = 30\n",
-    "b = 4\n",
-    "\n",
-    "my_modulus = a % b\n",
-    "print(my_modulus)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ** (exponent)\n",
-    "\n",
-    "Performs <b>exponential (power)</b> calculation on operators."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = 2 ** 11\n",
-    "\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### (Floor Division)\n",
-    "\n",
-    "The division of operands where the result is the quotient in which the digits after the decimal point are removed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = 10.25\n",
-    "b = 2\n",
-    "\n",
-    "my_floor_division = (a // b)\n",
-    "print(my_floor_division)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3.7 Membership Operators\n",
-    "\n",
-    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators −"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### in\n",
-    "\n",
-    "Evaluates to true if it finds a variable in the specified sequence and false otherwise."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = 10\n",
-    "my_list = [2,4,6,8,10]\n",
-    "my_list_2 = [1,2,3,4,5]\n",
-    "\n",
-    "print(a in my_list)   # Prints 'True' because 10 is included in my_list \n",
-    "print(a in my_list_2) # Prints 'False' because 10 is not included in my_list_2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### not in\n",
-    "\n",
-    "Evaluates to true if it does not finds a variable in the specified sequence and false otherwise. Basically, it is the opposite of '<i>in</i>' that was explained above."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = 10\n",
-    "my_list = [2,4,6,8,10]\n",
-    "my_list_2 = [1,2,3,4,5]\n",
-    "\n",
-    "print(a not in my_list)   # Prints 'False' because 10 is included in my_list \n",
-    "print(a not in my_list_2) # Prints 'True' because 10 is not included in my_list_2"
+    "class Cls(object):\n",
+    "    '''Class docstring'''\n",
+    "    \n",
+    "    def method(self):\n",
+    "        \"\"\"Method docstring\"\"\"\n",
+    "        pass"
    ]
   }
  ],
