changed order of augmented operator titles

--- a/Beginner_1/3. Operators and Delimiters.ipynb
+++ b/Beginner_1/3. Operators and Delimiters.ipynb
@@ -243,7 +243,7 @@
     "\n",
     "The assignment operator `=` can be augmented with arithmetic operators and used in combination instead of using mutiple statements.\n",
     "\n",
-    "### Add AND (+=) \n",
+    "###  `+=` (add AND)\n",
     "\n",
     "Adds right operand to the left operand and assign the result to left operand. \n",
     "\n",
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subtract AND ( -= )\n",
+    "### `-=` (subtract AND)\n",
     "Subtracts the right operand from left and assigns subtraction to the left operand. \n",
     "\n",
     "For example −"
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multiply AND ( *= )\n",
+    "### `*=` (multiply AND)\n",
     "\n",
     "Multiplies right operand with the left operand and assign the result to left operand.\n",
     "\n",
@@ -395,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Divide AND (/=)\n",
+    "### `/=` (divide AND)\n",
     "\n",
     "Divides left operand with the right operand and assign the result to left operand. \n",
     "\n",
@@ -446,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modulus AND (%=)\n",
+    "### `%=` (modulus AND)\n",
     "Takes modulus using two operands and assign the result to left operand. \n",
     "\n",
     "For example −"
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exponent AND (**=)\n",
+    "### `**=` (exponent AND)\n",
     "Performs exponential (power) calculation on operators and assign value to the left operand. \n",
     "\n",
     "For example −"
@@ -546,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Floor Division (//=)\n",
+    "### `//=` (floor division AND)\n",
     "Performs floor division on operators and assign value to the left operand. \n",
     "\n",
     "For example −"
