added set comprehension and minor description change

--- a/Beginner_1/3. Operators and Delimiters.ipynb
+++ b/Beginner_1/3. Operators and Delimiters.ipynb
@@ -962,7 +962,7 @@
    "source": [
     "# 3.2 [Delimiters](https://docs.python.org/3.5/reference/lexical_analysis.html#delimiters)\n",
     "\n",
-    "You'll also encounter a lot of delimiters in Python. One delimiter you won't see a lot of is the semicolon (`;`). The line delimiter is completely optional in Python. Each data type has its own delimiter and these delimiters can be found in other places. Let's look at what some common delimiters mean."
+    "You'll also encounter a lot of delimiters in Python. One delimiter you won't see a lot is the semicolon (`;`). The line delimiter is completely optional in Python. Each data type has its own delimiter and these delimiters can be found in other places. Let's look at what some common delimiters mean."
    ]
   },
   {
@@ -983,6 +983,7 @@
    "outputs": [],
    "source": [
     "a = [1, 2, 3, 4]\n",
+    "\n",
     "b = [  # these can be split up to multiple lines\n",
     "    1,\n",
     "    2,\n",
@@ -997,7 +998,7 @@
    "source": [
     "## 3.2.2 `{ }` ([curly] braces)\n",
     "\n",
-    "These brackets represent either __dictionaries__ when it contains key-value pairs, or a __set__ when it contains a list-like value."
+    "These brackets represent either __dictionaries__ when it contains key-value pairs, a __set__ when it contains a list-like value, or a __set comprehension__ when it contains an expression."
    ]
   },
   {
@@ -1009,7 +1010,10 @@
    "outputs": [],
    "source": [
     "a = {\"key\": \"value\"}  # dictionary\n",
-    "b = {1, 2, 3}  # set"
+    "\n",
+    "b = {1, 2, 3}  # set\n",
+    "\n",
+    "c = {i for i in range(3)}  # set comprehension"
    ]
   },
   {
@@ -1034,6 +1038,7 @@
    "outputs": [],
    "source": [
     "a = (1, 2, 3)  # tuple\n",
+    "\n",
     "b = (i for i in range(3))  # generator expression"
    ]
   },
