moved examples to code block

--- a/Beginner_1/2. Syntax.ipynb
+++ b/Beginner_1/2. Syntax.ipynb
@@ -24,41 +24,106 @@
    "source": [
     "##### Avoid whitespaces in the following situations:\n",
     "\n",
-    "- Immediately inside the parentheses, brackets, or braces\n",
-    "  \n",
-    "      Yes: spam(ham[1], {eggs: 2})\n",
-    "  \n",
-    "      No:  spam( ham[ 1 ], { eggs: 2 } )\n",
-    "  \n",
+    "- Immediately inside the parentheses, brackets, or braces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Yes:\n",
+    "spam(ham[1], {eggs: 2})\n",
     "\n",
-    "  \n",
-    "- Immediately before a comma, semicolon, or colon:\n",
+    "# No:\n",
+    "spam( ham[ 1 ], { eggs: 2 } )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Immediately before a comma, semicolon, or colon:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Yes:\n",
+    "if x == 4: print x, y; x, y = y, x\n",
     "\n",
-    "      Yes: if x == 4: print x, y; x, y = y, x\n",
-    "  \n",
-    "      No:  if x == 4 : print x , y ; x , y = y , x\n",
-    "  \n",
+    "# No:\n",
+    "if x == 4 : print x , y ; x , y = y , x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Immediately before the open parenthesis that starts an indexing or slicing. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Yes:\n",
+    "dct['key'] = lst[index]\n",
     "\n",
-    " - Immediately before the open parenthesis that starts an indexing or slicing. \n",
-    "  \n",
-    "      Yes: dct['key'] = lst[index]\n",
-    "  \n",
-    "      No:  dct ['key'] = lst [index]\n",
-    "\n",
-    "\n",
-    "- More than once space around an assignment(or other) operator to align  it with another.\n",
-    "  \n",
-    "      Yes: \n",
-    "           x = 1\n",
-    "           y = 2\n",
-    "           long_variable = 3\n",
-    "    \n",
-    "      No:\n",
-    "          x             = 1\n",
-    "          y             = 2\n",
-    "          long_variable = 3\n",
-    "      \n",
-    "For other rules, please click [here](https://docs.python.org/3/reference/lexical_analysis.html)\n"
+    "# No:\n",
+    "dct ['key'] = lst [index]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- More than once space around an assignment(or other) operator to align  it with another."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 1\n",
+    "y = 2\n",
+    "long_variable = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x             = 1\n",
+    "y             = 2\n",
+    "long_variable = 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For other rules, please click [here](https://docs.python.org/3/reference/lexical_analysis.html)"
    ]
   },
   {
